other/restrict-deprecated-registry/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-deprecated-registry
policies:
- ../restrict-deprecated-registry.yaml
resources:
- resource.yaml
results:
- kind: Pod
  policy: restrict-deprecated-registry
  resources:
  - policy-test/test-pod-bad
  result: fail
  rule: restrict-deprecated-registry
- kind: Pod
  policy: restrict-deprecated-registry
  resources:
  - policy-test/test-pod-good
  result: pass
  rule: restrict-deprecated-registry
